--- a/app/src/main/res/layout/fragment_wallpapers_category.xml
+++ b/app/src/main/res/layout/fragment_wallpapers_category.xml
@@ -61,6 +61,16 @@
                 android:textSize="@dimen/text_content_secondary" />
         </LinearLayout>
 
+        <ImageView
+            android:id="@+id/collapse"
+            android:layout_width="48dp"
+            android:layout_height="48dp"
+            android:layout_gravity="right|bottom"
+            android:scaleType="centerInside"
+            android:background="?attr/selectableItemBackgroundBorderless"
+            android:theme="@style/ButtonStyle"
+            android:src="@drawable/ic_arrow_drop_down_circle_white"/>
+
     </FrameLayout>
 
 </android.support.v7.widget.CardView>
