--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -61,4 +61,6 @@
 
     <color name="image_info_bg">#80ffffff</color>
     <color name="category_card_background">@android:color/white</color>
+
+    <color name="newWallpaperColor">#DC4316</color>
 </resources>
