kill swipe to refresh
we will use a push model to check for new

--- a/app/src/main/res/layout/activity_wallpaper_board.xml
+++ b/app/src/main/res/layout/activity_wallpaper_board.xml
@@ -57,7 +57,7 @@
             android:layout_gravity="bottom"
             android:background="?android:attr/windowBackground"
             app:menu="@menu/bottom_navigation_view" />
-        <!--app:layout_behavior="com.maxwen.wallpaper.board.activities.BottomNavigationBehavior"-->
+            app:layout_behavior="com.maxwen.wallpaper.board.activities.BottomNavigationBehavior"-->
 
     </android.support.design.widget.CoordinatorLayout>
 
