--- a/app/src/main/res/values/dashboard_configurations.xml
+++ b/app/src/main/res/values/dashboard_configurations.xml
@@ -9,7 +9,7 @@
 
     <!-- CONFIG: APPLICATION NAME -->
 
-    <string name="app_name">WallpaperBoard Demo</string>
+    <string name="app_name">Wallpapers</string>
 
     <!-- CONFIG: DEFAULT THEME -->
 
