add reload toolbar action

--- a/app/src/main/res/values/custom_strings.xml
+++ b/app/src/main/res/values/custom_strings.xml
@@ -7,4 +7,5 @@
     <string name="category_count">Wallpapers</string>
     <string name="wallpaper_new_added_new">new wallpapers</string>
     <string name="wallpaper_new_title">New Wallpapers</string>
+    <string name="menu_reload">Reload</string>
 </resources>
