--- a/app/src/main/res/menu/menu_wallpapers.xml
+++ b/app/src/main/res/menu/menu_wallpapers.xml
@@ -1,14 +1,19 @@
 <?xml version="1.0" encoding="utf-8"?>
 <menu xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto" >
+      xmlns:app="http://schemas.android.com/apk/res-auto">
 
     <item
         android:id="@+id/menu_search"
         android:icon="@drawable/ic_toolbar_search"
         android:title="@string/menu_search"
         app:actionViewClass="android.support.v7.widget.SearchView"
-        app:showAsAction="always|collapseActionView" />
+        app:showAsAction="always|collapseActionView"/>
 
+    <item
+        android:id="@+id/menu_reload"
+        android:icon="@drawable/ic_toolbar_reload"
+        android:title="@string/menu_reload"
+        app:showAsAction="always"/>
     <!--<item
         android:id="@+id/menu_filter"
         android:icon="@drawable/ic_toolbar_filter"
