--- a/app/src/main/res/layout-land/fragment_about_item_sub.xml
+++ b/app/src/main/res/layout-land/fragment_about_item_sub.xml
@@ -30,8 +30,7 @@
             android:textColor="?android:attr/textColorPrimary"
             android:textSize="@dimen/text_content_title"
             android:background="?attr/selectableItemBackground"
-            android:theme="@style/ButtonStyle"
-            fontPath="fonts/Font-Medium.ttf"/>
+            android:theme="@style/ButtonStyle"/>
 
     </LinearLayout>
 
