--- a/app/src/main/res/layout/activity_splash.xml
+++ b/app/src/main/res/layout/activity_splash.xml
@@ -21,7 +21,6 @@
         android:textSize="@dimen/splash_screen_text"
         android:padding="20dp"
         android:gravity="center"
-        android:text="@string/splash_screen_title"
-        fontPath="fonts/Font-Medium.ttf"/>
+        android:text="@string/splash_screen_title"/>
 
 </RelativeLayout>
