--- a/app/src/main/res/layout/fragment_about_item_footer.xml
+++ b/app/src/main/res/layout/fragment_about_item_footer.xml
@@ -15,8 +15,7 @@
         android:layout_height="wrap_content"
         android:text="@string/about_dashboard"
         android:textSize="@dimen/text_content_title"
-        android:textColor="?android:attr/textColorPrimary"
-        fontPath="fonts/Font-Medium.ttf"/>
+        android:textColor="?android:attr/textColorPrimary"/>
 
     <TextView
         android:layout_width="match_parent"
@@ -24,8 +23,7 @@
         android:layout_marginTop="@dimen/content_padding"
         android:text="@string/about_dashboard_dev"
         android:textSize="@dimen/text_content"
-        android:textColor="?android:attr/textColorPrimary"
-        fontPath="fonts/Font-Regular.ttf"/>
+        android:textColor="?android:attr/textColorPrimary"/>
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -43,8 +41,7 @@
             android:textSize="@dimen/text_content"
             android:maxLines="1"
             android:ellipsize="end"
-            app:backgroundTint="?attr/card_background"
-            fontPath="fonts/Font-Medium.ttf"/>
+            app:backgroundTint="?attr/card_background"/>
 
         <android.support.v7.widget.AppCompatButton
             android:id="@+id/dev_github"
@@ -55,8 +52,7 @@
             android:textSize="@dimen/text_content"
             android:maxLines="1"
             android:ellipsize="end"
-            app:backgroundTint="?attr/colorAccent"
-            fontPath="fonts/Font-Medium.ttf"/>
+            app:backgroundTint="?attr/colorAccent"/>
 
     </LinearLayout>
 
