--- a/app/src/main/res/layout/fragment_about_item_header.xml
+++ b/app/src/main/res/layout/fragment_about_item_header.xml
@@ -40,8 +40,7 @@
         android:gravity="center_horizontal"
         android:text="@string/about_title"
         android:textColor="?android:attr/textColorPrimary"
-        android:textSize="@dimen/text_title"
-        fontPath="fonts/Font-Medium.ttf"/>
+        android:textSize="@dimen/text_title"/>
 
     <org.sufficientlysecure.htmltextview.HtmlTextView
         android:id="@+id/subtitle"
@@ -55,8 +54,7 @@
         android:paddingTop="@dimen/content_padding"
         android:gravity="center_horizontal"
         android:textColor="?android:attr/textColorSecondary"
-        android:textSize="@dimen/text_content"
-        fontPath="fonts/Font-Regular.ttf"/>
+        android:textSize="@dimen/text_content"/>
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -74,8 +72,7 @@
             android:textSize="@dimen/text_content"
             android:maxLines="1"
             android:ellipsize="end"
-            app:backgroundTint="?attr/card_background"
-            fontPath="fonts/Font-Medium.ttf"/>
+            app:backgroundTint="?attr/card_background"/>
 
         <android.support.v7.widget.AppCompatButton
             android:id="@+id/link1"
@@ -86,8 +83,7 @@
             android:textSize="@dimen/text_content"
             android:maxLines="1"
             android:ellipsize="end"
-            app:backgroundTint="?attr/card_background"
-            fontPath="fonts/Font-Medium.ttf"/>
+            app:backgroundTint="?attr/card_background"/>
 
         <android.support.v7.widget.AppCompatButton
             android:id="@+id/email"
@@ -98,8 +94,7 @@
             android:textSize="@dimen/text_content"
             android:maxLines="1"
             android:ellipsize="end"
-            app:backgroundTint="?attr/colorAccent"
-            fontPath="fonts/Font-Medium.ttf"/>
+            app:backgroundTint="?attr/colorAccent"/>
 
     </LinearLayout>
 
