--- a/app/src/main/res/layout/fragment_inappbilling_item_list.xml
+++ b/app/src/main/res/layout/fragment_inappbilling_item_list.xml
@@ -35,7 +35,6 @@
         android:layout_marginEnd="12dp"
         android:layout_marginRight="12dp"
         android:textSize="@dimen/text_content_subtitle"
-        android:textColor="?android:attr/textColorPrimary"
-        fontPath="fonts/Font-Regular.ttf"/>
+        android:textColor="?android:attr/textColorPrimary"/>
 
 </LinearLayout>
