--- a/app/src/main/res/layout/fragment_wallpaper_options.xml
+++ b/app/src/main/res/layout/fragment_wallpaper_options.xml
@@ -36,8 +36,7 @@
                 android:layout_gravity="center_vertical"
                 android:layout_marginLeft="@dimen/content_margin"
                 android:layout_marginStart="@dimen/content_margin"
-                android:textColor="?android:attr/textColorPrimary"
-                fontPath="fonts/Font-Medium.ttf"/>
+                android:textColor="?android:attr/textColorPrimary"/>
 
             <TextView
                 android:layout_width="wrap_content"
@@ -47,8 +46,7 @@
                 android:layout_gravity="center_vertical"
                 android:layout_marginLeft="@dimen/content_margin"
                 android:layout_marginStart="@dimen/content_margin"
-                android:textColor="?android:attr/textColorSecondary"
-                fontPath="fonts/Font-Regular.ttf"/>
+                android:textColor="?android:attr/textColorSecondary"/>
 
         </LinearLayout>
 
@@ -76,8 +74,7 @@
             android:layout_gravity="center_vertical"
             android:layout_marginLeft="@dimen/content_margin"
             android:layout_marginStart="@dimen/content_margin"
-            android:textColor="?android:attr/textColorPrimary"
-            fontPath="fonts/Font-Medium.ttf"/>
+            android:textColor="?android:attr/textColorPrimary"/>
 
     </LinearLayout>
 
