--- a/app/src/main/res/layout/fragment_wallpaper_settings.xml
+++ b/app/src/main/res/layout/fragment_wallpaper_settings.xml
@@ -44,8 +44,7 @@
                     android:layout_marginStart="10dp"
                     android:layout_marginRight="6dp"
                     android:layout_marginEnd="6dp"
-                    android:textColor="?android:attr/textColorPrimary"
-                    fontPath="fonts/Font-Medium.ttf"/>
+                    android:textColor="?android:attr/textColorPrimary"/>
 
                 <TextView
                     android:layout_width="wrap_content"
@@ -57,8 +56,7 @@
                     android:layout_marginStart="10dp"
                     android:layout_marginRight="6dp"
                     android:layout_marginEnd="6dp"
-                    android:textColor="?android:attr/textColorSecondary"
-                    fontPath="fonts/Font-Regular.ttf"/>
+                    android:textColor="?android:attr/textColorSecondary"/>
 
             </LinearLayout>
 
@@ -97,8 +95,7 @@
                     android:layout_marginStart="10dp"
                     android:layout_marginRight="6dp"
                     android:layout_marginEnd="6dp"
-                    android:textColor="?android:attr/textColorPrimary"
-                    fontPath="fonts/Font-Medium.ttf"/>
+                    android:textColor="?android:attr/textColorPrimary"/>
 
                 <TextView
                     android:layout_width="wrap_content"
@@ -110,8 +107,7 @@
                     android:layout_marginStart="10dp"
                     android:layout_marginRight="6dp"
                     android:layout_marginEnd="6dp"
-                    android:textColor="?android:attr/textColorSecondary"
-                    fontPath="fonts/Font-Regular.ttf"/>
+                    android:textColor="?android:attr/textColorSecondary"/>
 
             </LinearLayout>
 
