--- a/app/src/main/res/layout/navigation_view_counter.xml
+++ b/app/src/main/res/layout/navigation_view_counter.xml
@@ -13,7 +13,6 @@
         android:layout_width="30dp"
         android:layout_height="30dp"
         android:gravity="center"
-        android:textSize="@dimen/text_content"
-        fontPath="fonts/Font-Medium.ttf"/>
+        android:textSize="@dimen/text_content"/>
 
 </LinearLayout>
