--- a/app/src/main/res/layout/navigation_view_header.xml
+++ b/app/src/main/res/layout/navigation_view_header.xml
@@ -26,16 +26,14 @@
             android:layout_height="wrap_content"
             android:textColor="@color/navigationViewTitle"
             android:textSize="16sp"
-            android:text="@string/navigation_view_header_title"
-            fontPath="fonts/Font-Medium.ttf"/>
+            android:text="@string/navigation_view_header_title"/>
 
         <TextView
             android:id="@+id/header_version"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:textColor="@color/navigationViewTitle"
-            android:textSize="14sp"
-            fontPath="fonts/Font-Regular.ttf"/>
+            android:textSize="14sp"/>
 
     </LinearLayout>
 
