--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -18,6 +18,8 @@
     <dimen name="card_category_margin_left">0dp</dimen>
     <dimen name="card_category_margin_top">0dp</dimen>
     <dimen name="card_category_margin_bottom">0dp</dimen>
+
+    <dimen name="card_content_padding">2dp</dimen>
     <!-- FAB -->
     <dimen name="fab_size">56dp</dimen>
 
@@ -56,5 +58,10 @@
     <dimen name="about_profile_margin_top">-60dp</dimen>
 
     <dimen name="bottom_nav_height">50dp</dimen>
-    <dimen name="category_header_height">100dp</dimen>
+    <dimen name="category_header_height">80dp</dimen>
+
+    <dimen name="zoom_ring_min">48dp</dimen>
+    <dimen name="zoom_font_size">14pt</dimen>
+    <dimen name="focus_inner_stroke">2dp</dimen>
+    <dimen name="focus_outer_stroke">3dp</dimen>
 </resources>
