--- a/app/src/main/res/menu/menu_wallpaper_preview.xml
+++ b/app/src/main/res/menu/menu_wallpaper_preview.xml
@@ -2,11 +2,11 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto">
 
-    <item
+    <!--<item
         android:id="@+id/menu_wallpaper_settings"
         android:title="@string/menu_wallpaper_settings"
         android:icon="@drawable/ic_toolbar_wallpaper_settings"
-        app:showAsAction="always" />
+        app:showAsAction="always" />-->
 
     <item
         android:id="@+id/menu_save"
