--- a/app/src/main/res/values/custom_strings.xml
+++ b/app/src/main/res/values/custom_strings.xml
@@ -8,4 +8,5 @@
     <string name="wallpaper_new_added_new">new wallpapers</string>
     <string name="wallpaper_new_title">New Wallpapers</string>
     <string name="menu_reload">Reload</string>
+    <string name="folder_dialog_title">Select folder</string>
 </resources>
