--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,13 +1,13 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
 
-    <color name="colorPrimary">#DC4316</color>
-    <color name="colorPrimaryDark">#C43916</color>
-    <color name="colorAccent">#F25A16</color>
+    <color name="colorPrimary">#245c75</color>
+    <color name="colorPrimaryDark">#183d4d</color>
+    <color name="colorAccent">#e12475</color>
 
-    <color name="darkColorPrimary">#DC4316</color>
-    <color name="darkColorPrimaryDark">#C43916</color>
-    <color name="darkColorAccent">#F25A16</color>
+    <color name="darkColorPrimary">#245c75</color>
+    <color name="darkColorPrimaryDark">#183d4d</color>
+    <color name="darkColorAccent">#e12475</color>
 
     <!-- Splash Screen -->
     <color name="splashColor">#F2F2F2</color>
