--- a/app/src/main/res/menu/menu_wallpaper_preview.xml
+++ b/app/src/main/res/menu/menu_wallpaper_preview.xml
@@ -14,4 +14,15 @@
         android:icon="@drawable/ic_toolbar_save"
         app:showAsAction="always" />
 
+    <item
+        android:id="@+id/navigation_view_settings"
+        android:icon="@drawable/ic_drawer_settings"
+        android:title="@string/navigation_view_settings"
+        app:showAsAction="never"/>
+
+    <item
+        android:id="@+id/navigation_view_about"
+        android:icon="@drawable/ic_drawer_about"
+        android:title="@string/navigation_view_about"
+        app:showAsAction="never"/>
 </menu>
