--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -59,6 +59,7 @@
     <color name="wallpaperStatusBar">#AA000000</color>
     <color name="wallpaperToolbar">#66000000</color>
 
-    <color name="image_info_bg">#80ffffff</color>
+    <color name="image_info_bg">#66000000</color>
+    <color name="image_info_text">#ffffffff</color>
     <color name="newWallpaperColor">#DC4316</color>
 </resources>
