enable new wallpaper indicator

--- a/app/src/main/res/layout/fragment_wallpapers_category.xml
+++ b/app/src/main/res/layout/fragment_wallpapers_category.xml
@@ -38,6 +38,7 @@
             android:scaleType="centerInside"
             android:src="@drawable/ic_new_wallpaper"
             android:theme="@style/ButtonStyle"
+            android:background="?attr/selectableItemBackgroundBorderless"
             android:visibility="gone"/>
 
         <LinearLayout
